--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
   "require-dev": {
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "^5.2",
-    "phpmetrics/phpmetrics": "^1.10"
+    "phpmetrics/phpmetrics": "^1.10",
+    "behat/behat": "3.2.0",
+    "behat/gherkin": "4.4.4"
   },
   "require": {
     "php": ">=7.0.0"
