--- a/behat.yml
+++ b/behat.yml
@@ -2,6 +2,6 @@ default:
   autoload:
     'src': %paths.base%/tests/Behat/src
   suites:
-        VideoStore:
+        Webflix:
             paths: [ %paths.base%/tests/Behat/features/Webflix ]
             contexts: [ Tests\Behat\WebflixContext ]
